--- a/ruoyi-admin/src/main/resources/application-druid.yml
+++ b/ruoyi-admin/src/main/resources/application-druid.yml
@@ -22,7 +22,7 @@ spring:
             master:
                 url: jdbc:mysql://81.70.179.86:13306/lms?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=true&serverTimezone=GMT%2B8
                 username: root
-                password: Qwe123-=
+                password: Qwe123!@#
             # 从库数据源
             slave:
                 # 从数据源开关/默认关闭
